benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_ModExpPow2_Zeroes_iter4_error.log
=== Verification Error - Iteration 4 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_ModExpPow2_Zeroes.rs
Time: 2025-09-15 10:52:26

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:36:11
   |
36 |     while i as int >= 0
   |           ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:41:15
   |
41 |         if s@[i as int] == '1' {
   |               ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:65:11
   |
65 |     while i as int >= 0
   |           ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:70:22
   |
70 |         if exp_bits@[i as int] == '1' {
   |                      ^^^^^^^^

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:29:9
   |
29 |         result == Str2Int(s@),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:30:14
   |
30 |         0 <= result
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:58:9
   |
58 |         result == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:59:9
   |
59 |         result >= 0
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:83:24
   |
83 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:84:17
   |
84 |         Str2Int(result@) == n
   |                 ^^^^^^ not found in this scope

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:36:11
   |
36 |     while i as int >= 0
   |           ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:41:15
   |
41 |         if s@[i as int] == '1' {
   |               ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:65:11
   |
65 |     while i as int >= 0
   |           ^^^^^^^^

error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:70:22
   |
70 |         if exp_bits@[i as int] == '1' {
   |                      ^^^^^^^^

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:29:9
   |
29 |         result == Str2Int(s@),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:30:14
   |
30 |         0 <= result
   |              ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:58:9
   |
58 |         result == Exp_int(base as nat, Str2Int(exp_bits@)) % (modulus as nat),
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:59:9
   |
59 |         result >= 0
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:83:24
   |
83 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_ModExpPow2_Zeroes_impl.rs:84:17
   |
84 |         Str2Int(result@) == n
   |                 ^^^^^^ not found in this scope

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0425`.
